[project]
name = "sleeper-matchups"
version = "0.1.0"
description = "App to analyze match-up history in sleeper fantasy football."
authors = [
    {name = "marcobaron"}
]
readme = "README.md"
requires-python = ">=3.9,!=3.9.7,<4.0"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "streamlit (>=1.46.1,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "streamlit-pills (>=0.3.0,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
